<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.echozyk.udacity.myapplicationportfolio.MainActivity">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="My Nanodegree Apps!"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_main"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_spotify_steamer"
                style="@style/btn_yellow_first_style"
                android:text="@string/text_btn_spotify_steamer" />

            <Button
                android:id="@+id/btn_scores_app"
                style="@style/btn_yellow_style"
                android:text="@string/text_btn_scores_app" />

            <Button
                android:id="@+id/btn_library_app"
                style="@style/btn_yellow_style"
                android:text="@string/text_btn_library_app" />

            <Button
                android:id="@+id/btn_build_it_bigger"
                style="@style/btn_yellow_style"
                android:text="@string/text_btn_build_it_bigger" />

            <Button
                android:id="@+id/btn_bacon_reader"
                style="@style/btn_yellow_style"
                android:text="@string/text_btn_bacon_reader" />

            <Button
                android:id="@+id/btn_capstone"
                style="@style/btn_red_style"
                android:text="@string/text_btn_capstone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
